--- a/webserver.yml
+++ b/webserver.yml
@@ -2,7 +2,7 @@
 - hosts: all
   become: yes
   tasks: 
-   - name: iam going to install webserver
-     apt: 
-   - name: apache2
-     state: present  
+  - name: install webserver
+    apt: 
+  - name: apache2
+    state: present  
