--- a/webserver.yml
+++ b/webserver.yml
@@ -4,5 +4,5 @@
   tasks: 
   - name: install webserver
     apt: 
-  - name: apache2
-    state: present  
+      name: apache2
+      state: present  
