--- a/java7ubun.yml
+++ b/java7ubun.yml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
    - name: ppa java jdk
-   - apt_repository:
+     apt:
        repo: ppa:openjdk-r/ppa
        state: present
      when: ansible_os_family=="Debian"   
