java7 on ubuntu

--- a/java7ubun.yml
+++ b/java7ubun.yml
@@ -2,12 +2,12 @@
 - hosts: webservers
   become: yes
   tasks:
-   - name: ppa java jdk
+   - name: ppa java jre
    - apt_repository:
        repo: ppa:openjdk-r/ppa
        state: present
      when: ansible_os_family=="Debian"   
-   - name: install openjdk-7-jdk
+   - name: install openjdk-7-jre
      apt:
        name: openjdk-7-jre
        state: latest
