java7 on ubuntu

--- a/java7ubun.yml
+++ b/java7ubun.yml
@@ -7,10 +7,9 @@
        repo: ppa:openjdk-r/ppa
        state: present
      when: ansible_os_family=="Debian"   
-   - name: install openjdk-7-jre
+   - name: Run the equivalent of "apt-get update" as a separate step
      apt:
-       name: openjdk-7-jre
-       state: latest
+       update_cache: yes
      when: ansible_os_family=="Debian"
 
    - name: install java7 on ubuntu16
