--- a/java7ubun.yml
+++ b/java7ubun.yml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
    - name: ppa java jdk
-   - apt_repository:
+     apt:
        repo: ppa:openjdk-r/ppa
        state: present
      when: ansible_os_family=="Debian"   
@@ -14,6 +14,6 @@
 
    - name: install java7 on ubuntu16
      apt:
-       name: openjdk-7-jdk
+       name: openjdk-7-jre
        state: present
      when: ansible_os_family=="Debian"   
