--- a/template.yml
+++ b/template.yml
@@ -13,7 +13,7 @@
       name: apache2
       state: started
 
-  - name: copy dynamic file into ubuntu nodes
+  - name: copy dynamic file into all ubuntu nodes
     template:
        src: index.j2
        dest: /var/www/html/index.html
