--- a/rajeshrole/tasks/main.yml
+++ b/rajeshrole/tasks/main.yml
@@ -3,3 +3,18 @@
 - name: install tree
   apt:
     name: tree
+
+- name: install java
+  apt_repository: 
+    repo: ppa:openjdk-r/ppa
+
+- name: apt-get update 
+  apt:
+    update_cache: yes
+
+- name: install java7 on ubuntu16
+  apt:
+    name: openjdk-7-jdk       
+- name: install tomcat 7
+  apt: 
+    name: tomcat7     
